Fixes Firefox info layout issue

--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -15,7 +15,6 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    height: 100%;
     justify-content: space-between;
     min-height: var(--info-min-height);
     position: relative;
